macOS: Fix QuartzCore linking and compiling with 10.11

Follow-up on 10b5f8a0d6ab

Fixes https://gitlab.gnome.org/GNOME/gtk/-/issues/4573